--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <title>Random Choice Generator</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hi how are ya?</h2>
-    <script src="script.js"></script>
+    <div class="container">
+        <h3>Enter all of the choices divided by a comma (','). <br> Press enter when you're done</h3>
+        <textarea placeholder="Enter choices here..." id="textarea"></textarea>
+  
+        <div id="tags"></div>
+      </div>
+  
+      <script src="script.js"></script>
 </body>
 </html>
